2013-10-03 Jussi Ohenoja <juice@swagman.org>
	* Changed init so that in case of failure repair mode can be entered without booting the device first.
	* Replaced OS names with generic OS tags all over the scripts.

2013-10-02 Jussi Ohenoja <juice@swagman.org>
	* Tried to get SSHD working, still some problems
	* Organized menu scripts under own directory in repositiry.
	* Added templates for sshd configuration scripts.
	* Changed logging so that the output directory is configurable.
	* Bug/Typo corrections all over the place.
	* Updated archive version tag.

2013-10-01 Jussi Ohenoja <juice@swagman.org>
	* Compiled sshd for ubiboot.
	* Some bug corrections for menu scripts.
	* Added configurable log file directories.

2013-09-30 Jussi Ohenoja <juice@swagman.org>
	* Updated required config version to 2.
	* Added checking/logging of the selected kernel file existance.
	* Added handling of 8-item menu in boot selection scripts.
	* Added kernel command line override switches; either replace whole commandline from a file or append parameters defined in the configuration file.
	* Corrected bug in kernel selection which caused load_harmattan() and load_nemo() to return success even when kernel file was not found.
	* Modified init so that it searches all partitions for ubiboot.conf before giving up.
	* Added the OS entries for FirefoxOS, Ubuntu & SailfishOS.
	* Removed mountable partition listing from ubiboot.conf and changed init to try to mount all partitions.
	* Changed the boot kernel link creation from the menu script to init. Removed the link creation from CPIO packing script.

2013-09-27 Jussi Ohenoja <juice@swagman.org>
	* Decided to put the usr/ubifs hierarchy under subversion.

2013-09-25 Jussi Ohenoja <juice@swagman.org>
	* Added version check for CPIO.

2013-09-24 Jussi Ohenoja <juice@swagman.org>
	* Added configuration parameters for own IP addrress and DHCP offer IP address.

2013-09-23 Jussi Ohenoja <juice@swagman.org>