@@ -1,3 +1,7 @@
+2013-10-08 Jussi Ohenoja <juice@swagman.org>
+	* Bug corrections to menu selection scripts. There was a variable mixup that prevented booting off the Firefox‚ Ubuntu & Sailfish menus.
+	* Added more detailed logging to menu scripts
+
 2013-10-03 Jussi Ohenoja <juice@swagman.org>
 	* Changed init so that in case of failure repair mode can be entered without booting the device first.
 	* Replaced OS names with generic OS tags all over the scripts.
